# FFmpegDemo

./: README.md
app/: build.gradle
app/src/androidTest/java/com/droidrui/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDecoder.c  AudioDecoder.h  AudioJNI.c  AudioPlayer.c  AudioPlayer.h  CMakeLists.txt  VideoDecoder.c  VideoDecoder.h  VideoJNI.c  ffmpeg.c  ffmpeg.h  jni_audio.c  log.h
app/src/main/java/: com_droidrui_ffmpegdemo_jni_AudioJNI.h
app/src/main/java/com/droidrui/ffmpegdemo/: App.java
app/src/main/java/com/droidrui/ffmpegdemo/activity/: DecodeAudioActivity.java  DecodeVideoActivity.java  EncodeAudioActivity.java  EncodeVideoActivity.java  MainActivity.java  PlayActivity.java
app/src/main/java/com/droidrui/ffmpegdemo/jni/: AudioJNI.java  VideoJNI.java
app/src/main/res/layout/: activity_decode_audio.xml  activity_decode_video.xml  activity_encode_audio.xml  activity_encode_video.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/droidrui/ffmpegdemo/: ExampleUnitTest.java
